# finbook

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml  telegram.yaml
docs/: architecture.md  compliance-design.md  requirements.md  review-report.md
src/finbook/: __init__.py
src/finbook/core/: __init__.py  beancount_engine.py  compliance.py
